test/testData/parser/negative/chibc1.err
test/testData/parser/negative/chibc1.c:10:19: warning: type specifier missing, defaults to 'int'
test/testData/parser/negative/chibc1.c:10:24: error: unexpected token * '*' instead of )
test/testData/parser/negative/chibc1.c:13:11: error: use of undeclared identifier 'ty'
test/testData/parser/negative/chibc1.c:13:11: error: statement requires expression of integer type ('ERROR TYPE' invalid)
